  sufficiently new versions of Paramiko (1.7.7.1 in Debian wheezy is
  OK). Reported by Lars Kruse.

* The nagios plugin for Obnam now correctly handles the case
  where a backup repository for a client exists, but does not have
  a backup yet. Patch by Lars Kruse.

* `obnam ls` now handles trailing slashes in filename arguments.
  Reported by Biltong.

Version 1.5, released 2013-08-08
--------------------------------

Bug fixes:

* Terminal progress reporting now updated only every 0.1 seconds,
  instead of 0.01 seconds, to reduce terminal emulator CPU usage.
  Reported by Neal Becker.
* Empty exclude patterns are ignored. Previously, a configuration file
  line such as "exclude = foo, bar," (note trailing comma) would result
  in an empty pattern, which would match everything, and therefore
  nothing would be backed up. Reported by Sharon Kimble.
* A FUSE plugin to access (read-only) data from the backup repository
  has been added. Written by Valery Yundin.

Version 1.4, released 2013-03-16
--------------------------------

* The``ls` command now takes filenames as (optional) arguments, instead
  of a list of generations. Based on patch by Damien Couroussé.
* Even more detailed progress reporting during a backup.
* Add --fsck-skip-generations option to tell fsck to not check any
  generation metadata.
* The default log level is now INFO, instead of DEBUG. This is to be
  considered a quantum leap in the continuing rise of the maturity level
  of the software. (Actually, the change is there just to save some
  disk space and I/O for people who don't want to be involved in Obnam
  development and don't want to have massive log files.)
* The default sizes for the `lru-size` and `upload-queue-size` settings
  have been reduced, to reduce the memory impact of Obnam.
* `obnam restore` now reports transfer statistics at the end, similarly
  to what `obnam backup` does. Suggested by "S. B.".

Bug fixes:
