@@ -1,1 +1,1 @@
-ERROR: chunk BLOTTED checksum error
+ERROR: There were errors when restoring
